# MathLibrary

./: .gitignore  MathLibrary.sln  MathLibraryV2.sln
Benchmarks/: NumberSystems.md
Common/: Common.vcxproj  Common.vcxproj.filters  Core.h  Directives.h  Exceptions.h  Expression.h  Identity.h  Lazy.h  Options.h  Stringable.h  Template.h  Zero.h
Core/: Core.h  Core.vcxproj  Core.vcxproj.filters  Exceptions.h  Expression.h  Lazy.h  Stringify.h
LinearAlgebra/: ArrayOps.h  Core.h  DotProduct.h  EuclideanNorm.h  Exceptions.h  IdentityMatrix.h  LU.h  LUDecomposition.h  LinearAlgebra.h  LinearAlgebra.vcxproj  LinearAlgebra.vcxproj.filters  MatOps.h  Matrix.h  MatrixAddition.h  MatrixExpression.h  MatrixMultiplication.h  MatrixNegation.h  MatrixPermutation.h  MatrixScalarProduct.h  MatrixScalarQuotient.h  MatrixSubtraction.h  MatrixVectorProduct.h  PermutationMatrix.h  PlaceBlock.h  Slice.h  SquareOps.h  Transpose.h  VecOps.h  Vector.h  fwd.h  (+6 more)
__Benchmarks/_Live/: BUILD.bat  CMakeLists.txt  IntegerNumbers.cpp  LinearAlgebra.cpp  NaturalNumbers.cpp  NumberSystems.cpp  _Live.vcxproj  _Live.vcxproj.filters  __Template.cpp
__Benchmarks/_Live/CMake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Benchmarks.sln  CMakeCache.txt  NumberSystems.vcxproj  NumberSystems.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
__Benchmarks/_Live/CMake/generators/: cmake_install.cmake
__Benchmarks/_Live/CMake/headers/: cmake_install.cmake
__Benchmarks/_Live/generators/: LinearAlgebra.h  NumberSystems.h
__Benchmarks/_Live/headers/: Benchmarker.h
(+220 files in other folders)
